# basic_borrow

./: Cargo.toml  makefile
src/: lib.rs  main.rs
src/interface/: app.rs  interface.rs
src/model/: person.rs
src/repo/: people.rs
src/route/: people.rs
src/service/: people.rs
